Tue Apr 27 08:31:21 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/ThreadPools/TP_Reactor.cpp:
        * examples/APG/Threads/Message_Queue.cpp:
          Don't use ACE_Reactor deprecreated methods.

Tue Apr 27 08:18:23 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/MT_Reactor_Timer_Test.cpp:
        * tests/Notify_Performance_Test.cpp:
        * tests/Service_Config_Test.cpp:
        * tests/TP_Reactor_Test.cpp:
        * tests/Thread_Pool_Reactor_Resume_Test.cpp:
        * tests/Thread_Pool_Reactor_Test.cpp:
          Don't use ACE_Get_Opt and ACE_Reactor deprecreated methods.

Mon Apr 26 17:21:39 2004  Steve Huston  <shuston@riverace.com>

	* configure.ac: Change the tests for sem_init() and sem_destroy() to
	  use AC_SEARCH_LIBS instead of AC_CHECK_FUNC. The entrypoints are in
	  librt, so weren't being located. This allows ACE_HAS_POSIX_SEM to
	  be detected correctly.

Mon Apr 26 17:31:11 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/Acceptor.cpp:
	  Use ACE_Reactor::instance()->end_reactor_event_loop () to end the
	  event loop instead of the deprecated ACE::Reactor::end_event_loop()

Mon Apr 26 02:09:01 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/CDR_Base.h (ACE_CDR::Boolean):

	  This type is now a true C++ "bool".  On a related note, the
	  OMG IDL-to-C++ mapping allows this type to be "bool" for ANSI
	  compliant compilers.  All compilers currently supported by ACE
	  support the C++ "bool" type, so we're in luck.

	* ace/CDR_Stream.h:

	  Made all single argument "{from,to}_*" constructors explicit (if
	  supported by the compiler), as required by the OMG IDL-to-C++
	  mapping.  Addresses potential implicit conversion issues.

	  Fixed some broken Doxygen documentation.

  	  (good_bit_, do_byte_swap_, current_is_writable_):

	  Converted these flags and their corresponding accessors from
	  "int" to "bool", and changed the declaration order to optimize