@@ -2215,8 +2215,14 @@ ACE_OS::rw_trywrlock_upgrade (ACE_rwlock_t *rw)
 {
   ACE_OS_TRACE ("ACE_OS::rw_trywrlock_upgrade");
 #if defined (ACE_HAS_THREADS)
-# if !defined (ACE_LACKS_RWLOCK_T) || defined (ACE_HAS_PTHREADS_UNIX98_EXT)
-  // Some native rwlocks, such as those on Solaris and HP-UX 11, don't
+# if defined (ACE_HAS_PTHREADS_UNIX98_EXT)
+  // This will probably result in -1, EDEADLK, at least on HP-UX, but let it
+  // go - it's a more descriptive error than ENOTSUP.
+  ACE_OSCALL_RETURN (ACE_ADAPT_RETVAL (pthread_rwlock_trywrlock (rw),
+                                       ace_result_),
+                     int, -1);
+# elif !defined (ACE_LACKS_RWLOCK_T)
+  // Some native rwlocks, such as those on Solaris, don't
   // support the upgrade feature . . .
   ACE_UNUSED_ARG (rw);
   ACE_NOTSUP_RETURN (-1);
